[gd_scene load_steps=4 format=2]

[ext_resource path="res://effects/hypno_teleport.ogg" type="AudioStream" id=1]
[ext_resource path="res://characters/npc.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]

[node name="NPC" type="StaticBody"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
npc_name = "Darkspawn"

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0927493, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="HypnoArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="HypnoArea"]

[node name="InteractionArea" type="Area" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
shape = SubResource( 1 )

[node name="TweenRotate" type="Tween" parent="."]

[node name="SoundTeleport" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
[connection signal="area_entered" from="HypnoArea" to="." method="_on_HypnoArea_area_entered"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
[connection signal="tween_all_completed" from="TweenRotate" to="." method="_on_TweenRotate_tween_all_completed"]
